# 2min_research_papers

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  get_summaries_by_date.py  pyproject.toml  run_pipeline.py
docs/: prd.md
src/config/: settings.py
src/pipeline/: main.py
src/pipeline/steps/: download_pdf.py  extract_text.py  fetch_arxiv.py  store_redis.py  summarize.py
src/utils/: logging_config.py  redis_utils.py
tests/: test_e2e_pipeline.py
tests/pipeline/steps/: test_store_redis.py
